<resources>
    <!-- Parse -->
    <string name="parse_client_key" translatable="false">He9LcKvRl8pYLjhOBNfaja8bH08gZ5HX76SnIPDF</string>
    <string name="parse_app_id" translatable="false">D7kI64caRSnhaF6ijs3z0DWeU334e2AdXejN7b06</string>

    <!-- Top -->
    <string name="app_name">Min Busskompis</string>
    <string name="title_activity">Min BussKompis</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- On first startup -->
    <string name="startup_dialog_info_button">OK</string>
    <string name="startup_dialog_info_text" translatable="false"><b>Min Busskompis V 0.1</b>\n
    Min busskompis är utvecklad av Grupp4 för ElectriCity Innovation Challange 2015. Målet med appen är att underlätta för barn att åka buss och vagn själv genom att tillhandahålla ledning och tillsyn utan att behöva följa med barnet i person.\n\n
    För att komma igång med appen klickar du lägga till knappen i parentvyn och matar sedan in den unika kod som genereras på din barns mobil i barnvyn. Efter ni har kopplat mobilerna till varandra kan du lägga till platser till ditt barn som den sedan kan använda som destination för sin resa.\n\n\n
    <b>Min Busskompis V 0.1</b>\n
    Min busskompis is developed by Grupp4 for ElectriCity Innovation Challenge 2015. The goal of the app is to make it easier for children to use buses and trams alone by providing management and supervision without the need to accompany the child in person\n\n
    To start using the app, press the add button in the parents menu and enter the unique code generated on your child\'s phone in the child section of the app. Once paired you can add locations to your child which it can then view and set as destination for its trip.\n\n\n
    <EMAIL mailto="grupp4contact@gmail.com">grupp4contact@gmail.com</EMAIL>
    </string>

    <string name="activity_about_info_text" translatable="false">@string/startup_dialog_info_text</string>

    <!-- Utilized by both views -->

    <string name="all_reset_dialog_title">Reset</string>
    <string name="all_reset_dialog_message">This will reset your app, and you will lose all connections
    do you wish to continue?</string>
    <string name="all_reset_dialog_yes">Yes</string>
    <string name="all_reset_dialog_no">No</string>
    <string name="all_exit_dialog_title">Exit Min BussKompis</string>
    <string name="all_exit_dialog_message">Do you wish to exit the application?</string>
    <string name="all_exit_dialog_yes">Yes</string>
    <string name="all_exit_dialog_no">No</string>

    <!-- Parent views -->
    <string name="parent_children_loading_text">Loading children...</string>
    <string name="parent_active_child_current_status">Current Status</string>
    <string name="parent_children_list_item_active_text">Click for more info</string>
    <string name="parent_add_child_hint_text">Enter child code</string>
    <string name="parent_children_list_no_children_text">No children added</string>
    <string name="parent_add_child_button_text">Add Child</string>

    <string name="parent_add_destination_ac_hint">Enter place name or address</string>
    <string name="parent_add_destination_save_as_name">Enter name</string>
    <string name="parent_add_destination_save_button">Add location</string>

    <string name="parent_destinations_loading_text">Loading destinations...</string>

    <string name="parent_child_settings_destinations_button">Destinations</string>
    <string name="parent_child_settings_delete_child_button">Delete child</string>
    <string name="parent_child_settings_exit_child_button">Save and exit</string>
    <string name="parent_child_settings_delete_child_dialog_title">Remove child</string>
    <string name="parent_child_settings_delete_child_dialog_message">Do you really want to remove this child?</string>
    <string name="parent_child_settings_delete_child_dialog_yes">Yes</string>
    <string name="parent_child_settings_delete_child_dialog_no">No</string>
    <string name="parent_child_settings_delete_child_toast_post_execute">New name saved!</string>
    <string name="parent_child_settings_save_child_button">Save Name</string>

    <string name="parent_settings_settings_text">Settings</string>
    <string name="parent_settings_reset_button_text">Reset</string>
    <string name="parent_settings_notifications_switch_text">Notifications</string>
    <string name="parent_settings_toast_notifications_on">Notifications on...</string>
    <string name="parent_settings_toast_notifications_off">Notifications off...</string>

    <string name="startup_child_button">Child</string>
    <string name="startup_parent_button">Parent</string>
    <string name="startup_info_text">Select if the device should be used as child or as parent</string>

    <string name="parent_active_child_inactive_text">Child not active</string>
    <string name="parent_active_child_walking_text">Going to bus stop</string>
    <string name="parent_active_child_atbusstation_text">At Bus station</string>
    <string name="parent_active_child_onbus_text">Traveling by bus</string>
    <string name="parent_active_child_leavingbus_text">Leaving bus</string>
    <string name="parent_active_child_goingtodestination_text">Going to Destination</string>
    <string name="parent_active_child_default">Child is active</string>

    <string name="parent_child_destinations_viewholder_defaulttext">No destinations for child</string>

    <string name="parent_children_add_busssync_toast_sync">Sending sync request...</string>
    <string name="parent_children_add_busssync_toast_success">Succesfully synced with device with Installation ID: </string>
    <string name="parent_children_add_busssync_toast_failed">Could not sync with device</string>
    <string name="parent_children_add_busssynt_toast_noinput">No code has been entered...</string>

    <!-- Child views -->
    <string name="child_bus_station_title">On bus station</string>
    <string name="child_bus_station_leaving_from_title">Leaving from</string>
    <string name="child_bus_station_bus_coming_in">The bus is arriving at</string>
    <string name="child_bus_station_bus_name">Your bus name</string>

    <string name="child_code_title">Code:</string>
    <string name="child_code_next_button">Next</string>
    <string name="child_code_reset_button">Reset</string>
    <string name="child_code_toast_text_received">Received request from device with ID: </string>
    <string name="child_code_toast_text_notreceived">No requests received</string>

    <string name="child_destinations_loading_text">Loading destinations...</string>
    <string name="child_destinations_fetch_data">Fetching data for trip...</string>
    <string name="child_destinations_not_found">No destinations for child</string>
    <string name="child_destinations_trying_to_get_gps">Trying to get your current location...</string>
    <string name="child_destinations_trying_to_get_gps_not_found">Your current location could not be found, go outside and try again</string>

    <string name="child_going_from_bus_on_location">Im there, end trip</string>
    <string name="child_going_from_bus_help_to_loc">Help me find my destination</string>
    <string name="child_going_from_bus_dialog_title">End trip</string>
    <string name="child_going_from_bus_dialog_message">Are you at your final destination?</string>
    <string name="child_going_from_bus_dialog_yes_button">Yes</string>
    <string name="child_going_from_bus_dialog_no_button">No, help me find it</string>

    <string name="child_going_to_bus_im_on_bs">Im at the bus stop</string>
    <string name="child_going_to_bus_help_to_bs">Help me find the bus stop</string>

    <string name="child_leave_bus_exit_at_next_stop">Exit at next bus stop</string>
    <string name="child_leave_bus_stop_button_not_pressed">Stop button not pressed</string>
    <string name="child_leave_bus_stop_button_pressed">Stop button is pressed</string>

    <string name="child_on_bus_title">On bus</string>
    <string name="child_on_bus_your_bus_stop">Exit at this bus stop</string>
    <string name="child_on_bus_arriving_at">Arriving at</string>
    <string name="child_on_bus_next_bus_stop">Next bus stop</string>
    <string name="next_stop_init_text">Fetching next stop...</string>
    <string name="starting_journey_toast">Starting journey...</string>

    <string name="child_bus_station_title_text">At Bus Station</string>

    <string name="child_onbackwardspressed_dialog_title">Stop Trip</string>
    <string name="child_onbackwardspressed_dialog_message">Do you wish to return to Destinations?</string>
    <string name="child_onbackwardspressed_dialog_option_yes">Yes</string>
    <string name="child_onbackwardspressed_dialog_option_no">No</string>
    <string name="stop_button_pressed">Stop button is pressed!</string>

    <string name="addlocationonmap_no_dest">No destination selected</string>
    <string name="addlocationonmap_no_name">Enter a destinationname to save</string>
    <string name="addlocationonmap_saving">Saving...</string>


</resources>
