<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.grupp4.minbusskompis.ui.ChildBusStation"
    android:background="@color/background">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="on bus"
        android:id="@+id/button_dummystation"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/child_bus_station_title"
        android:text="@string/child_bus_station_title_text"
        android:layout_below="@+id/button_dummystation"
        android:gravity="center"
        android:textSize="@dimen/font_title"
        android:textColor="@color/font_standard"
        />

        <LinearLayout
            android:layout_marginTop="@dimen/standard_top_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#fff"
            android:layout_below="@+id/child_bus_station_title">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/child_bus_station_leaving_from_title"
                android:background="@color/layout_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Bus station name and char"
                android:gravity="center"
                android:textSize="18sp"
                android:id="@+id/child_bus_stop_bsname_char"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/child_bus_station_bus_coming_in"
                android:background="@color/layout_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Bus coming in, minutes"
                android:gravity="center"
                android:textSize="18sp"
                android:id="@+id/child_bus_station_time_to_bus"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/child_bus_station_bus_name"
                android:background="@color/layout_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Next bus name"
                android:gravity="center"
                android:textSize="18sp"
                android:id="@+id/child_bus_station_next_bus_name"
                />

        </LinearLayout>

</RelativeLayout>

