<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapsActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2">

        <AutoCompleteTextView
            android:id="@+id/destination_add_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/parent_add_destination_ac_hint"
            android:singleLine="true"
            android:layout_weight="1"
            />
        <FrameLayout
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_weight="0">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_destination_clear_text"
                android:src="@drawable/delete"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:minHeight="25dp"
                android:maxWidth="25dp" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout2"
        android:layout_above="@+id/linearLayout3">

        <fragment
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_destination_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_margin="5dp"
            />


    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3">

        <EditText
            android:id="@+id/destination_add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/parent_add_destination_save_as_name"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/destination_add_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent_add_destination_save_button"
            android:layout_weight="0"
            android:background="@color/button_background"
            android:textColor="@color/button_text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_margin="2dp"
            />

    </LinearLayout>

</RelativeLayout>